feat: creating a route that returns the most popular titles
