# src/routes.ts
@@ -20,6 +20,7 @@ import { searchGenreController } from "./useCases/Genre/Search/index.ts";
 import { singleFileUpload } from "./providers/MulterImage.ts";
 import { releasesController } from "./useCases/Dasboard/Releases/index.ts";
 import { recentlyAddedController } from "./useCases/Dasboard/RecentlyAdded/index.ts";
+import { popularController } from "./useCases/Dasboard/Popular/index.ts";
 
 const router = Router();
 
@@ -165,6 +166,10 @@ router.get("/dashboard/releases/", (request, response) => {
 
 router.get("/dashboard/recentylAdded/", (request, response) => {
   return recentlyAddedController.handle(request, response);
+});
+
+router.get("/dashboard/popular/", (request, response) => {
+  return popularController.handle(request, response);
 });
 
 export { router };
